--- a/item/templates/item/detalle.html
+++ b/item/templates/item/detalle.html
@@ -9,7 +9,7 @@
     </div>
     <div class="col-span-2 p-6 bg-gray-100 rounded-xl">
         <h2 class="mb-6 text-3xl">{{item.name}}</h2>
-        <p class="text-gray-500"><strong>Price: </strong>{{item.price}}</p>
+        <p class="text-gray-500"><strong>Precio: </strong>{{item.price}}</p>
         <p class="text-gray-500"><strong>Vendedor: </strong>{{item.created.by.username}}</p>
         {%if item.description%}
         <p class="text-gray-700">
